2013-02-25  Earnie Boyd  <earnie@usres.sourceforge.net>

	* NEWS: Add and adjust release notes for 4.0.
	* tests/Makefile.in: Correct order of libraries in LIBS.
	* include/io.h: Correct declarations for _findfirst/_findnext when
	not _HAVE_32BIT_TIME_T.

2013-02-24  Earnie Boyd  <earnie@users.sourceforge.net>

	* lib/lib32/ddk/ntoskrnl.def (KeQueryActiveProcessorCount): Correct
	typo.
	(KeQueryActiveProcessors): Add import.
	* NEWS: Add and adjust release notes for 4.0.

2013-02-23  Earnie Boyd  <earnie@users.sourceforge.net>

	* README: Add references for reporting bugs and submitting patches.
	Correct the @FILENAME@ cut/paste issue.
	* NEWS: Add and adjust release notes for 4.0.

2013-02-23  Johann Hanne  <jonnyh33@users.sourceforge.net>

	Add missing UUID Interface Definitions.

	* src/libuuid/cguid-uuid.c (CLSID_StdGlobalInterfaceTable): Define.
	* src/libuuid/objidl-uuid.c (IID_IGlobalInterfaceTable): Define.
	(FMTID_DocSummaryInformation): Ditto.
	(FMTID_SummaryInformation): Ditto.
	(FMTID_UserDefinedProperties): Ditto.

2013-02-22  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/float.h (_MCW_DN, _DN_SAVE, _DN_FLUSH): Add definitions.
	* include/winuser.h (POINTTOPOINTS, POINTSTOPOINT): Adjust parameters
	with type specificity.
	* include/windef.h(MAKEWORD, MAKELONG, LOWORD, HIWORD, LOBYTE, HIBYTE):
	Ditto. Also use DWORD_PTR instead of DWORD.
	* include/winuser.h (POINTTOPOINTS): Remove the cast to POINTS struct.
	* include/winreg.h (reason.h): Include.
	* include/oaidl.h (ICreateTypeInfo, ICreateTypeInfo2): Declare
	INTERFACE.
	(ICreateTypeLib, ICreateTypeLib2): Ditto.

2013-02-21  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/oleauto.h (RegisterTypeLibForUser, UnRegisterTypeLibForUser):
	Add declarations.
	* lib/lib32/oleaut32.def: Ditto.
	* include/fcntl.h (O_RAW): Add definition within ndef NO_MOLDAMES path.

2013-02-20  F. Mensik  <pepezdepa@users.sourceforge.net>

	* include/winnls.h (LONG_PTR): Add _WIN64 typedef.
